[package]
name = "endorbot"
version = "0.1.0"
edition = "2024"

[dependencies]
astra = "0.4.0"
clap = { version = "4.5.54", features = ["derive"] }
image = "0.25.9"
ocrs = "0.12.0"
parking_lot = "0.12.5"
pathfinding = "4.14.0"
rand = "0.9.2"
rgb = "0.8.52"
rkyv = "0.8.14"
rten = "0.24.0"
rten-imageproc = "0.24.0"
rten-tensor = "0.24.0"
rustdct = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
transpose = "0.2.3"


[target.'cfg(target_arch = "x86_64")'.dependencies]
ravif = { version = "0.13.0", default-features = false, features = ["threading"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
ravif = { version = "0.13.0" }